order creation logic